font size 15px + fix overflow-x messaggi

--- a/client/style.css
+++ b/client/style.css
@@ -12,7 +12,7 @@
   box-sizing: border-box;
 }
 #chat_messages {
-  font-size: 16px;
+  font-size: 15px;
   color: #222222;
 }
 html, body {
